--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazon Prime Vídeo</title>
+    <title>Trhacknon Amazon Prime Vídeo</title>
     <script src="movie.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
